<resources>
    <string name="app_name">COVID-19 (BD)</string>
    <string name="title_home">HOTLINE</string>
    <string name="title_comp">HOME</string>
    <string name="title_dashboard" translatable="false">WHO Q&amp;A</string>
    <string name="title_notifications">MORE AWARENESS</string>
    <string name="what_corona">What is a coronavirus?</string>
    <string name="what_corona_ans">Coronaviruses are a large family of viruses which may cause illness in animals or humans.  In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19.</string>
    <string name="what_covid">What is COVID-19?</string>
    <string name="symptoms">What are the symptoms of COVID-19?</string>
    <string name="symptoms_ans">The most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become infected but don’t develop any symptoms and don\'t feel unwell. Most people (about 80%) recover from the disease without needing special treatment. Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people, and those with underlying medical problems like high blood pressure, heart problems or diabetes, are more likely to develop serious illness. People with fever, cough and difficulty breathing should seek medical attention.</string>
    <string name="how_spread">How does COVID-19 spread?</string>
    <string name="protect">What can I do to protect myself and prevent the spread of disease?</string>
    <string name="mask">Should I wear a mask to protect myself?</string>
    <string name="mask_use">How to put on, use, take off and dispose of a mask?</string>
    <string name="animal">Can humans become infected with the COVID-19 from an animal source?</string>
    <string name="animal_ans">Coronaviruses are a large family of viruses that are common in animals. Occasionally, people get infected with these viruses which may then spread to other people. For example, SARS-CoV was associated with civet cats and MERS-CoV is transmitted by dromedary camels. Possible animal sources of COVID-19 have not yet been confirmed.    To protect yourself, such as when visiting live animal markets, avoid direct contact with animals and surfaces in contact with animals. Ensure good food safety practices at all times. Handle raw meat, milk or animal organs with care to avoid contamination of uncooked foods and avoid consuming raw or undercooked animal products.</string>
    <string name="alive_surfaces">How long does the virus survive on surfaces?</string>
    <string name="alive_surface_ans">It is not certain how long the virus that causes COVID-19 survives on surfaces, but it seems to behave like other coronaviruses. Studies suggest that coronaviruses (including preliminary information on the COVID-19 virus) may persist on surfaces for a few hours or up to several days. This may vary under different conditions (e.g. type of surface, temperature or humidity of the environment).  If you think a surface may be infected, clean it with simple disinfectant to kill the virus and protect yourself and others. Clean your hands with an alcohol-based hand rub or wash them with soap and water. Avoid touching your eyes, mouth, or nose.</string>
    <string name="how_sprete_ans">People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick. \n \nWHO is assessing ongoing research on the ways COVID-19 is spread and will continue to share updated findings.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="covid_19_ans">COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</string>
    <string name="how_sprate_ans">People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick.\n\nWHO is assessing ongoing research on the ways COVID-19 is spread and will continue to share updated findings.</string>
    <string name="myths_and_rumours">Myths and Rumours</string>
    <string name="myths_and_rumours_con">Myths and Rumours (Continue)</string>
    <string name="provide_info">Please provide real information to be safe and keep your family safe.</string>
    <string name="name">Possible Patient Name</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="about_text">The sole purpose of this initiative is to create mass awareness about the novel coronavirus (2019-nCoV, widely known as Covid 19) outbreak in Bangladesh. The app is also designed to share information about the likely prevention of this recent pandemic. From social responsibility, this mobile app is developed by Md. Jubayer Ahsan and Noor Nabiul Alam Siddiqui.</string>
    <string name="about">ABOUT</string>
    <string name="help_desk">Helpdesk: Providing expected patient information</string>
    <string name="patient_age">Age of the Patient</string>
    <string name="patient_sex">Patient sex</string>
    <string name="patient_mobile">Patient Mobile</string>
    <string name="your_mobile">Your Mobile (Optional)</string>
    <string name="patient_address">Patient Address</string>
    <string name="submit">Submit</string>
    <string name="permission">This form is not yet active. We try to get permission from IEDCR.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="third_gender">Third Gender</string>
    <string name="sex">Sex</string>
    <string name="number_update">All numbers were taken from IEDCR.\nLast updated: 20/03/2020</string>

    <string name="courtesy">Sponsored By</string>
    <string name="bip">Bangladesh Institute of Planners (BIP)</string>
    <string name="more_info">More info about covid-19</string>
    <string name="lab">LABS &amp; MEDICALS</string>
    <string name="labs">Lab Locations</string>
    <string name="hospital">Treatment Center Locations</string>
</resources>
