<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hotline"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_qa"
        android:contentDescription="@string/title_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_status"
        android:contentDescription="@string/title_comp"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_comp" />

    <item
        android:id="@+id/navigation_video"
        android:contentDescription="@string/title_notifications"
        android:icon="@drawable/ic_sync_problem_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_labhospital"
        android:contentDescription="@string/lab"
        android:icon="@drawable/ic_local_hospital_black_24dp"
        android:title="@string/lab" />

</menu>
