<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_status">

    <fragment
        android:id="@+id/navigation_status"
        android:name="io.binarybase.covid19.ui.StatusFragment"
        android:label="@string/title_comp"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigation_hotline"
        android:name="io.binarybase.covid19.ui.HotlineFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hotline" />

    <fragment
        android:id="@+id/navigation_qa"
        android:name="io.binarybase.covid19.ui.QAFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_qa" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="io.binarybase.covid19.ui.VideoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_labhospital"
        android:name="io.binarybase.covid19.ui.LabHospitalFragment"
        android:label="@string/lab"
        tools:layout="@layout/fragment_lab_hospital" />
</navigation>
